--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,7 +7,8 @@
       </div>
       <div class="card form-login">
         <!--<div class="logo-login"></div>-->
-        <span class="glyphicon glyphicon-lock"></span>
+        <!--<span class="glyphicon glyphicon-lock"></span>-->
+        <div class="login-icon"></div>
         <!--<h3>Login</h3>-->
         <input type="text" name="usuario" placeholder="Usuário" ng-model="username" keys-shortcuts enter="login.avancar()">
         <input type="password" name="senha" placeholder="Senha" ng-model="password" keys-shortcuts enter="login.login(username, password)">
