--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -78,7 +78,7 @@
         <div><h4>Código</h4></div>
         <!--<div class="input-group">-->
         <div>
-          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" keys-shortcuts prevent-default="true" enter="orcamento.buscaProdutoPorCodigo(cdProduto)" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" maxlength="6">
+          <input name="CdProduto" type="text" number-only class="form-control text-right" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" keys-shortcuts prevent-default="true" enter="orcamento.buscaProdutoPorCodigo(cdProduto)" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" maxlength="6">
         </div>
           <!--<span class="input-group-btn">-->
             <!--<button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>-->
