--- a/app/partials/dashboard/usuarios.html
+++ b/app/partials/dashboard/usuarios.html
@@ -1,16 +1,24 @@
 <!--USUARIOS-->
-<div class="col-md-12 col-lg-10 col-lg-offset-1">
-  <div class="col-md-12 card condensar-rows">
+<!--<div class="col-md-12 col-lg-10 col-lg-offset-1">-->
+  <div class="col-md-12 card">
+
     <div class="col-md-12 header">
       <h3>Usuários</h3>
     </div>
-    <!--<div class="col-md-offset-9 col-md-3">-->
-      <!--<h4>Filtrar por</h4>-->
-      <!--<select class="form-control"></select>-->
-      <!--<br>-->
-    <!--</div>-->
-    <div class="col-md-12" style="overflow-y: auto; max-height: 300px; margin-top: 20px">
-      <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 10">
+
+    <div class="col-md-3">
+      <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+      <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarUsuario()"><span class="glyphicon glyphicon-plus"></span> Novo Usuário</button>
+    </div>
+
+    <div class="col-md-12">
+      <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 35">
         <thead>
         <tr>
           <th>Perfil</th>
@@ -42,66 +50,67 @@
         </tbody>
       </table>
     </div>
+
   </div>
-</div>
+<!--</div>-->
 <!--FIM USUARIOS-->
 
 <!--NOVO USUARIO-->
-<div class="col-md-7 col-lg-6 col-lg-push-1">
-  <div class="col-md-12 card condensar-rows">
-    <div class="col-md-12 header">
-      <h3>Novo usuário</h3>
-    </div>
-    <div class="col-md-12">
-      <h4>Nome</h4>
-      <input type="text" class="form-control" ng-model="configuracoes.novoUsuario.nome">
-    </div>
-    <!--<div class="col-md-6">-->
-    <!--<h4>&nbsp;</h4>-->
-    <!--<input type="text" class="form-control" placeholder="Sobrenome">-->
+<!--<div class="col-md-7 col-lg-6 col-lg-push-1">-->
+  <!--<div class="col-md-12 card condensar-rows">-->
+    <!--<div class="col-md-12 header">-->
+      <!--<h3>Novo usuário</h3>-->
     <!--</div>-->
-    <div class="col-md-6">
-      <h4>Email</h4>
-      <input type="text" class="form-control" ng-model="configuracoes.novoUsuario.email">
-    </div>
-    <div class="col-md-6">
-      <h4>Nome de usuário</h4>
-      <input type="text" class="form-control" ng-model="configuracoes.novoUsuario.usuario">
-    </div>
-    <div class="col-md-6">
-      <h4>Criar uma senha</h4>
-      <input type="password" class="form-control" ng-model="configuracoes.novoUsuario.senha">
-    </div>
-    <div class="col-md-6">
-      <h4>Confirme a senha</h4>
-      <input type="password" class="form-control" ng-model="configuracoes.senhaCheck">
-    </div>
-    <div class="col-md-6">
-      <h4>Perfil</h4>
-      <select class="form-control" ng-model="configuracoes.novoUsuario.perfilId"
-              ng-options="perfil.id as perfil.nome for perfil in configuracoes.perfis">
-        <option value="" disabled>Selecione um perfil</option>
-      </select>
-    </div>
-    <div class="col-md-6">
-      <div><h4>Ativo</h4></div>
-      <div class="btn-group btn-toggle botao-esticado">
-        <label class="btn btn-primary" ng-model="configuracoes.novoUsuario.ativo" uib-btn-radio="true"><span
-          class="glyphicon glyphicon-eye-open"></span> Sim</label>
-        <label class="btn btn-primary" ng-model="configuracoes.novoUsuario.ativo" uib-btn-radio="false"><span
-          class="glyphicon glyphicon-eye-close"></span> Não</label>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <h4>&nbsp;</h4>
-      <button class="btn btn-default botao-esticado botao-principal" ng-click="configuracoes.limparCadastro()">Limpar
-      </button>
-    </div>
-    <div class="col-md-6">
-      <h4>&nbsp;</h4>
-      <button class="btn btn-default botao-esticado botao-principal" ng-click="configuracoes.cadastrar()">Enviar
-      </button>
-    </div>
-  </div>
-</div>
+    <!--<div class="col-md-12">-->
+      <!--<h4>Nome</h4>-->
+      <!--<input type="text" class="form-control" ng-model="configuracoes.novoUsuario.nome">-->
+    <!--</div>-->
+    <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+    <!--&lt;!&ndash;<h4>&nbsp;</h4>&ndash;&gt;-->
+    <!--&lt;!&ndash;<input type="text" class="form-control" placeholder="Sobrenome">&ndash;&gt;-->
+    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>Email</h4>-->
+      <!--<input type="text" class="form-control" ng-model="configuracoes.novoUsuario.email">-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>Nome de usuário</h4>-->
+      <!--<input type="text" class="form-control" ng-model="configuracoes.novoUsuario.usuario">-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>Criar uma senha</h4>-->
+      <!--<input type="password" class="form-control" ng-model="configuracoes.novoUsuario.senha">-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>Confirme a senha</h4>-->
+      <!--<input type="password" class="form-control" ng-model="configuracoes.senhaCheck">-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>Perfil</h4>-->
+      <!--<select class="form-control" ng-model="configuracoes.novoUsuario.perfilId"-->
+              <!--ng-options="perfil.id as perfil.nome for perfil in configuracoes.perfis">-->
+        <!--<option value="" disabled>Selecione um perfil</option>-->
+      <!--</select>-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<div><h4>Ativo</h4></div>-->
+      <!--<div class="btn-group btn-toggle botao-esticado">-->
+        <!--<label class="btn btn-primary" ng-model="configuracoes.novoUsuario.ativo" uib-btn-radio="true"><span-->
+          <!--class="glyphicon glyphicon-eye-open"></span> Sim</label>-->
+        <!--<label class="btn btn-primary" ng-model="configuracoes.novoUsuario.ativo" uib-btn-radio="false"><span-->
+          <!--class="glyphicon glyphicon-eye-close"></span> Não</label>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>&nbsp;</h4>-->
+      <!--<button class="btn btn-default botao-esticado botao-principal" ng-click="configuracoes.limparCadastro()">Limpar-->
+      <!--</button>-->
+    <!--</div>-->
+    <!--<div class="col-md-6">-->
+      <!--<h4>&nbsp;</h4>-->
+      <!--<button class="btn btn-default botao-esticado botao-principal" ng-click="configuracoes.cadastrar()">Enviar-->
+      <!--</button>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 <!--FIM NOVO USUARIO-->
