--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -4,7 +4,8 @@
   <div class="container">
     <div class="navbar-header">
 
-      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#menu-collapse" aria-expanded="false">
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#menu-collapse"
+              aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,13 +15,54 @@
     </div>
 
     <div class="collapse navbar-collapse" id="menu-collapse">
-      <ul class="nav navbar-nav nav-center" tabindex="-1">
+      <ul class="nav navbar-nav" tabindex="-1">
         <li><a ng-href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
         <li><a ng-href="#/orcamento"><span class="glyphicon glyphicon-shopping-cart"></span> Orçamento</a></li>
         <li><a ng-href="#/"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
         <!--<li><a ng-href="#/"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>-->
         <li><a ng-href="#/configuracoes"><span class="glyphicon glyphicon-cog"></span> Configurações</a></li>
-        <li><a ng-href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="glyphicon glyphicon-user"></span>
+            <strong>{{currentUser.usuario}}</strong>
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <div class="navbar-login">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <p class="text-center">
+                      <span class="glyphicon glyphicon-user icon-size"></span>
+                    </p>
+                  </div>
+                  <div class="col-lg-8">
+                    <p class="text-left"><strong>{{currentUser.nome}}</strong></p>
+                    <p class="text-left small">{{currentUser.email}}</p>
+                    <p class="text-center perfil">{{currentUser.perfil}}</p>
+                    <!--<p class="text-left">-->
+                      <!--<a href="" class="btn btn-default botao-invertido botao-esticado btn-sm">Perfil</a>-->
+                    <!--</p>-->
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="divider navbar-login-session-bg"></li>
+            <li class="navbar-login-session-bg">
+              <div class="navbar-login navbar-login-session">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <p>
+                      <a href="#/logout" class="btn btn-danger btn-block">Logout</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
 
