--- a/app/partials/modalUsuario.html
+++ b/app/partials/modalUsuario.html
@@ -5,7 +5,7 @@
       class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
   </div>
 
-  <div class="body condensar-rows">
+  <div class="body sm condensar-rows">
     <div class="col-md-12">
       <h4>Nome</h4>
       <input type="text" class="form-control" ng-model="modal.usuario.nome">
@@ -53,11 +53,11 @@
     <button class="btn btn-default botao-esticado botao-principal" ng-click="cancel()"><span
       class="glyphicon glyphicon-remove"></span> Fechar
     </button>
-    <button class="btn btn-default botao-esticado botao-principal" ng-click="excluir()"><span
-      class="glyphicon glyphicon-trash"></span> Excluir
-    </button>
+    <!--<button class="btn btn-default botao-esticado botao-principal" ng-click="excluir()"><span-->
+      <!--class="glyphicon glyphicon-trash"></span> Excluir-->
+    <!--</button>-->
     <button class="btn btn-default botao-esticado botao-principal" ng-click="salvar()"><span
-      class="glyphicon glyphicon-floppy-save"></span> Atualizar
+      class="glyphicon glyphicon-floppy-save"></span> Salvar
     </button>
   </div>
 </div>
