--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -479,6 +479,10 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     }
   }
 
+  .body.sm {
+    height: 340px;
+  }
+
   .footer {
     border-top: 1px solid #ccc;
     height: 60px;
