--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -2,7 +2,7 @@
   text-align: center;
 
   .frase {
-    margin-top: -50px;
+    //margin-top: -50px;
     margin-bottom: 50px;
     text-align: center;
 
@@ -17,6 +17,7 @@
     height: 340px;
     text-align: center;
     margin: auto;
+    margin-bottom: 20px;
     display: block;
     position: relative;
     padding: 20px;
