--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -28,6 +28,10 @@ body {
   }
 }
 
+body.padding-top {
+  padding-top: 160px;
+}
+
 body.padding-bottom {
   padding-bottom: 60px;
 }
@@ -119,16 +123,16 @@ body.padding-bottom {
 
 .vertical-center {
   min-height: 100%;  /* Fallback for vh unit */
-  min-height: 100vh; /* You might also want to use
-                        'height' property instead.
-
-                        Note that for percentage values of
-                        'height' or 'min-height' properties,
-                        the 'height' of the parent element
-                        should be specified explicitly.
-
-                        In this case the parent of '.vertical-center'
-                        is the <body> element */
+  //min-height: 100vh; /* You might also want to use
+  //                      'height' property instead.
+  //
+  //                      Note that for percentage values of
+  //                      'height' or 'min-height' properties,
+  //                      the 'height' of the parent element
+  //                      should be specified explicitly.
+  //
+  //                      In this case the parent of '.vertical-center'
+  //                      is the <body> element */
 
   /* Make it a flex container */
   display: -webkit-box;
@@ -480,7 +484,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   }
 
   .body.sm {
-    height: 340px;
+    height: 380px;
   }
 
   .footer {
