--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,7 @@
 <p>This is the about view.</p>
 
 F1
-<input type="text" keys-shortcuts f1="about.teste('f1')">
+<input type="text" keys-shortcuts f1="about.teste(about.objeto.valor)" ng-model="about.objeto['valor']">
 
 ENTER
 <input type="text" keys-shortcuts enter="about.teste('enter')">
