--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -120,11 +120,13 @@
 
 .header-alternativo {
   position: fixed;
+  top: 0;
   width: 100%;
   height: 140px;
   background-color: white;//$cor-principal;
   //position: relative;
   border-bottom: 10px solid $cor-principal;
+  z-index: 10;
   @extend .sombra;
 
   //.logo {
