--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -11,6 +11,9 @@ body {
     display: table;
     width: 100%; }
 
+body.padding-top {
+  padding-top: 160px; }
+
 body.padding-bottom {
   padding-bottom: 60px; }
 
@@ -88,17 +91,6 @@ body.padding-bottom {
 .vertical-center {
   min-height: 100%;
   /* Fallback for vh unit */
-  min-height: 100vh;
-                     /* You might also want to use
-                        'height' property instead.
-
-                        Note that for percentage values of
-                        'height' or 'min-height' properties,
-                        the 'height' of the parent element
-                        should be specified explicitly.
-
-                        In this case the parent of '.vertical-center'
-                        is the <body> element */
   /* Make it a flex container */
   display: -webkit-box;
   display: -moz-box;
@@ -315,7 +307,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   .meu-modal .body .container {
     width: 100%; }
 .meu-modal .body.sm {
-  height: 340px; }
+  height: 380px; }
 .meu-modal .footer {
   border-top: 1px solid #ccc;
   height: 60px;
@@ -459,10 +451,12 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 
 .header-alternativo {
   position: fixed;
+  top: 0;
   width: 100%;
   height: 140px;
   background-color: white;
   border-bottom: 10px solid #3b5998;
+  z-index: 10;
   background-image: url("../images/logotipo.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -493,7 +487,6 @@ div[name="footer"] .navbar {
 #login {
   text-align: center; }
   #login .frase {
-    margin-top: -50px;
     margin-bottom: 50px;
     text-align: center; }
     #login .frase h1, #login .frase h2 {
@@ -504,6 +497,7 @@ div[name="footer"] .navbar {
     height: 340px;
     text-align: center;
     margin: auto;
+    margin-bottom: 20px;
     display: block;
     position: relative;
     padding: 20px; }
