--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="overflow-y: auto">
   <div class="vertical-center">
     <div id="login">
       <div class="frase">
