perfis & bug fixes

--- a/app/partials/modalBuscarEndereco.html
+++ b/app/partials/modalBuscarEndereco.html
@@ -42,25 +42,29 @@
               <th>Logradouro</th>
             </tr>
             </thead>
-            <tbody>
-            <tr ng-if="!enderecos.length" ng-repeat="v in vazio">
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr ng-repeat="e in enderecos" ng-click="selecionarEndereco(e)">
-              <td>{{e.cep}}</td>
-              <td>{{e.uf}}</td>
-              <td>{{e.cidade}}</td>
-              <td>{{e.bairro}}</td>
-              <td>{{e.logradouro}}</td>
-            </tr>
+            <tbody ng-init="max = 10">
+              <tr ng-repeat="e in enderecos" ng-click="selecionarEndereco(e)">
+                <td>{{e.cep}}</td>
+                <td>{{e.uf}}</td>
+                <td>{{e.cidade}}</td>
+                <td>{{e.bairro}}</td>
+                <td>{{e.logradouro}}</td>
+              </tr>
+              <tr ng-if="enderecos.length < max" ng-repeat="n in getNumber(enderecos.length < max ? max - enderecos.length : 0)">
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+              </tr>
             </tbody>
           </table>
         </div>
       </div>
+    </div>
+
+    <div class="paginas">
+      <ul uib-pagination total-items="600" ng-model="bigCurrentPage" max-size="15" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
 
   </div>
