--- a/app/views/configuracoes.html
+++ b/app/views/configuracoes.html
@@ -31,73 +31,9 @@
 
       <div class="col-md-offset-1 col-md-9 dashboard fill">
 
-        <!--<div name="usuarios" ng-include="'partials/dashboard/usuarios.html'" ng-if="controle==='usuarios'"></div>-->
+        <div class="container card fill" ng-if="controle==='usuarios'" ng-include="'partials/dashboard/usuarios.html'"></div>
+        <div class="container card fill" ng-if="controle==='perfis'" ng-include="'partials/dashboard/perfis.html'"></div>
         <div ng-include="'partials/dashboard/sobre.html'" ng-if="controle==='sobre'"></div>
-
-        <div class="container card fill" ng-if="controle==='usuarios'">
-          <div class="col-md-12">
-            <div class="header">
-              <h3>Usuários</h3>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizar()"><span
-              class="glyphicon glyphicon-refresh"></span> Atualizar
-            </button>
-          </div>
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-            <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarUsuario()"><span
-              class="glyphicon glyphicon-plus"></span> Novo Usuário
-            </button>
-          </div>
-          <div class="col-md-12">
-            <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 15">
-              <thead>
-              <tr>
-                <th>Perfil</th>
-                <th>Nome</th>
-                <th>Usuário</th>
-                <th>Email</th>
-                <th>Último Acesso</th>
-                <th>&nbsp;</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr ng-repeat="usuario in configuracoes.usuarios">
-                <td>{{usuario.perfil.nome}}</td>
-                <td>{{usuario.nome}}</td>
-                <td>{{usuario.usuario}}</td>
-                <td>{{usuario.email}}</td>
-                <td>{{usuario.ultimoAcesso | date}}</td>
-                <td><a href="" ng-click="configuracoes.editarUsuario(usuario)"><span
-                  class="glyphicon glyphicon-pencil"></span></a></td>
-              </tr>
-              <tr ng-if="configuracoes.usuarios.length < len"
-                  ng-repeat="n in getNumber(len - configuracoes.usuarios.length < 0 ? 0 : len - configuracoes.usuarios.length) track by $index">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <div class="container card fill" ng-if="controle==='perfis'">
-          <div class="col-md-12">
-            <div class="header">
-              <h3>Perfis</h3>
-            </div>
-          </div>
-        </div>
-
 
       </div>
 
