--- a/app/partials/dashboard/perfis.html
+++ b/app/partials/dashboard/perfis.html
@@ -1,11 +1,11 @@
-<!--USUARIOS-->
+<!--PERFIS-->
 <div class="col-md-12">
   <div class="header">
-    <h3>Usuários</h3>
+    <h3>Perfis</h3>
   </div>
 </div>
 <div class="col-md-3">
-  <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizarUsuarios()"><span
+  <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizarPerfis()"><span
     class="glyphicon glyphicon-refresh"></span> Atualizar
   </button>
 </div>
@@ -14,36 +14,30 @@
 <div class="col-md-3">
 </div>
 <div class="col-md-3">
-  <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarUsuario()"><span
-    class="glyphicon glyphicon-plus"></span> Novo Usuário
+  <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarPerfil()"><span
+    class="glyphicon glyphicon-plus"></span> Novo Perfil
   </button>
 </div>
 <div class="col-md-12">
   <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 15">
     <thead>
     <tr>
-      <th>Perfil</th>
       <th>Nome</th>
-      <th>Usuário</th>
-      <th>Email</th>
-      <th>Último Acesso</th>
+      <th>Data de Cadastro</th>
+      <th>Última Atualização</th>
       <th>&nbsp;</th>
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="usuario in configuracoes.usuarios">
-      <td>{{usuario.perfil.nome}}</td>
-      <td>{{usuario.nome}}</td>
-      <td>{{usuario.usuario}}</td>
-      <td>{{usuario.email}}</td>
-      <td>{{usuario.ultimoAcesso | date}}</td>
-      <td><a href="" ng-click="configuracoes.editarUsuario(usuario)"><span
+    <tr ng-repeat="perfil in configuracoes.perfis">
+      <td>{{perfil.nome}}</td>
+      <td>{{perfil.dataCadastro | date}}</td>
+      <td>{{perfil.ultimaAtualizacao | date}}</td>
+      <td><a href="" ng-click="configuracoes.editarPerfil(perfil)"><span
         class="glyphicon glyphicon-pencil"></span></a></td>
     </tr>
     <tr ng-if="configuracoes.usuarios.length < len"
-        ng-repeat="n in getNumber(len - configuracoes.usuarios.length < 0 ? 0 : len - configuracoes.usuarios.length) track by $index">
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
+        ng-repeat="n in getNumber(len - configuracoes.perfis.length < 0 ? 0 : len - configuracoes.perfis.length) track by $index">
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -55,4 +49,4 @@
     <ul uib-pagination total-items="600" ng-model="bigCurrentPage" max-size="15" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
   </div>
 </div>
-<!--FIM USUARIOS-->
+<!--FIM PERFIS-->
