--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -123,7 +123,8 @@ body.padding-bottom {
   padding-left: 4px;
   padding-right: 4px; }
   .condensar-rows .col-xs-1 > div, .condensar-rows .col-sm-1 > div, .condensar-rows .col-md-1 > div, .condensar-rows .col-lg-1 > div, .condensar-rows .col-xs-2 > div, .condensar-rows .col-sm-2 > div, .condensar-rows .col-md-2 > div, .condensar-rows .col-lg-2 > div, .condensar-rows .col-xs-3 > div, .condensar-rows .col-sm-3 > div, .condensar-rows .col-md-3 > div, .condensar-rows .col-lg-3 > div, .condensar-rows .col-xs-4 > div, .condensar-rows .col-sm-4 > div, .condensar-rows .col-md-4 > div, .condensar-rows .col-lg-4 > div, .condensar-rows .col-xs-5 > div, .condensar-rows .col-sm-5 > div, .condensar-rows .col-md-5 > div, .condensar-rows .col-lg-5 > div, .condensar-rows .col-xs-6 > div, .condensar-rows .col-sm-6 > div, .condensar-rows .col-md-6 > div, .condensar-rows .col-lg-6 > div, .condensar-rows .col-xs-7 > div, .condensar-rows .col-sm-7 > div, .condensar-rows .col-md-7 > div, .condensar-rows .col-lg-7 > div, .condensar-rows .col-xs-8 > div, .condensar-rows .col-sm-8 > div, .condensar-rows .col-md-8 > div, .condensar-rows .col-lg-8 > div, .condensar-rows .col-xs-9 > div, .condensar-rows .col-sm-9 > div, .condensar-rows .col-md-9 > div, .condensar-rows .col-lg-9 > div, .condensar-rows .col-xs-10 > div, .condensar-rows .col-sm-10 > div, .condensar-rows .col-md-10 > div, .condensar-rows .col-lg-10 > div, .condensar-rows .col-xs-11 > div, .condensar-rows .col-sm-11 > div, .condensar-rows .col-md-11 > div, .condensar-rows .col-lg-11 > div, .condensar-rows .col-xs-12 > div, .condensar-rows .col-sm-12 > div, .condensar-rows .col-md-12 > div, .condensar-rows .col-lg-12 > div {
-    padding: 0 !important; }
+    padding-left: 0 !important;
+    padding-right: 0 !important; }
 
 .btn.btn-default {
   color: #6481bb; }
@@ -301,13 +302,17 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
       .meu-modal .header .title .close:hover {
         color: white; }
 .meu-modal .body {
-  height: 460px;
+  height: 420px;
   overflow-y: auto;
   padding: 15px; }
   .meu-modal .body .container {
     width: 100%; }
 .meu-modal .body.sm {
   height: 380px; }
+.meu-modal .body.md {
+  height: 540px; }
+.meu-modal .body.lg {
+  height: 600px; }
 .meu-modal .footer {
   border-top: 1px solid #ccc;
   height: 60px;
@@ -381,6 +386,46 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   background-color: orangered; }
 .filtros .data-final {
   background-color: #880000; }
+
+.nav-tabs li > a {
+  color: #444; }
+.nav-tabs li.active > a {
+  color: #6481bb; }
+  .nav-tabs li.active > a:hover, .nav-tabs li.active > a:focus {
+    color: #6481bb; }
+
+.corpo-tabs {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-top: none;
+  border-radius: 0 0 5px 5px; }
+
+.panel.panel-default .panel-heading h4.panel-title {
+  color: #6481bb; }
+.panel.panel-default .panel-body {
+  color: #6481bb; }
+
+.paginas {
+  width: 100%;
+  height: 60px;
+  margin: 20px 0 0 0;
+  position: relative;
+  border-top: 1px solid #ddd; }
+  .paginas > ul {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 0; }
+
+.pagination > li > a {
+  color: #6481bb; }
+  .pagination > li > a:hover, .pagination > li > a:focus {
+    color: #6481bb; }
+.pagination > .active > a {
+  background-color: #6481bb;
+  border-color: #5c78ab; }
+  .pagination > .active > a:hover, .pagination > .active > a:focus {
+    background-color: #3b5998; }
 
 .banner {
   background-image: url("../images/logotipo.png");
