--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -173,7 +173,8 @@ body.padding-bottom {
     padding-right: 4px;
 
     > div {
-      padding: 0!important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
   }
 }
@@ -473,7 +474,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   }
 
   .body {
-    height: 460px;
+    height: 420px;
     //max-height: 500px;
     overflow-y: auto;
     padding: 15px;
@@ -485,6 +486,14 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 
   .body.sm {
     height: 380px;
+  }
+
+  .body.md {
+    height: 540px;
+  }
+
+  .body.lg {
+    height: 600px;
   }
 
   .footer {
@@ -631,6 +640,80 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 
   .data-final {
     background-color: #880000;
+  }
+}
+
+.nav-tabs {
+  li {
+    > a {
+      color: $cor-preto-leve;
+    }
+  }
+
+  li.active {
+    > a {
+      color: $cor-principal-clara;
+
+      &:hover, &:focus {
+        color: $cor-principal-clara;
+      }
+    }
+  }
+}
+
+.corpo-tabs {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+}
+
+.panel.panel-default {
+  .panel-heading {
+    h4.panel-title {
+      color: $cor-principal-clara;
+    }
+  }
+  .panel-body {
+    color: $cor-principal-clara;
+  }
+}
+
+.paginas {
+  width: 100%;
+  height: 60px;
+  margin: 20px 0 0 0;
+  position: relative;
+  border-top: 1px solid #ddd;
+
+  > ul {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+  }
+}
+
+.pagination {
+  > li {
+    > a {
+      color: $cor-principal-clara;
+
+      &:hover, &:focus {
+        color: $cor-principal-clara;
+      }
+    }
+  }
+
+  > .active {
+    > a {
+      background-color: $cor-principal-clara;
+      border-color: $cor-principal-leve;
+
+      &:hover, &:focus {
+        background-color: $cor-principal;
+      }
+    }
   }
 }
 
