--- a/app/partials/dashboard/sobre.html
+++ b/app/partials/dashboard/sobre.html
@@ -17,12 +17,14 @@
     <div class="header">
       <h3>Atalhos de teclado</h3>
     </div>
-    <span class="comando"><span class="label label-primary">Enter</span> Avançar para próximo campo</span>
-    <span class="comando"><span class="label label-primary">Shift</span> + <span
-      class="label label-primary">Enter</span> Avançar para próximo módulo</span>
-    <span class="comando"><span class="label label-primary">F1</span> Abrir busca</span>
-    <span class="comando"><span class="label label-primary">F5</span> Salvar orçamento</span>
-    <!--<span class="comando" ng-repeat="n in getNumber(5) track by $index"><span class="label label-primary">comando</span> descrição</span>-->
+    <div class="atalhos">
+      <span class="comando"><span class="label label-primary">Enter</span> Ação ou avançar p/ próx. campo</span>
+      <span class="comando"><span class="label label-primary">Shift</span> + <span
+        class="label label-primary">Enter</span> Avançar para próximo módulo</span>
+      <span class="comando"><span class="label label-primary">F1</span> Abrir busca</span>
+      <span class="comando"><span class="label label-primary">F5</span> Salvar orçamento</span>
+      <!--<span class="comando" ng-repeat="n in getNumber(5) track by $index"><span class="label label-primary">comando</span> descrição</span>-->
+    </div>
   </div>
 </div>
 
