--- a/app/partials/modalBuscarProduto.html
+++ b/app/partials/modalBuscarProduto.html
@@ -45,14 +45,14 @@
               <!--<th>Qtd</th>-->
             </tr>
             </thead>
-            <tbody ng-init="max = 10">
+            <tbody>
               <tr ng-repeat="p in produtos" ng-click="selecionarProduto(p)">
                 <td>{{p.codigo}}</td>
                 <td>{{p.referencia}}</td>
                 <td>{{p.nome}}</td>
                 <!--<td>{{p.qtdEstoque}}</td>-->
               </tr>
-              <tr ng-if="produtos.length < max" ng-repeat="n in getNumber(produtos.length < max ? max - produtos.length : 0) track by $index">
+              <tr ng-if="produtos.length < pagination.max" ng-repeat="n in getNumber(produtos.length < pagination.max ? pagination.max - produtos.length : 0) track by $index">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
@@ -64,7 +64,7 @@
     </div>
 
     <div class="paginas">
-      <ul uib-pagination total-items="600" ng-model="bigCurrentPage" max-size="15" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+      <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="pagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
 
   </div>
