--- a/app/partials/dashboard/usuarios.html
+++ b/app/partials/dashboard/usuarios.html
@@ -19,7 +19,7 @@
   </button>
 </div>
 <div class="col-md-12">
-  <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 15">
+  <table class="tabela tabela-bordered tabela-esticada">
     <thead>
     <tr>
       <th>Perfil</th>
@@ -36,12 +36,12 @@
       <td>{{usuario.nome}}</td>
       <td>{{usuario.usuario}}</td>
       <td>{{usuario.email}}</td>
-      <td>{{usuario.ultimoAcesso | date}}</td>
+      <td>{{usuario.ultimoAcesso ? (usuario.ultimoAcesso | date) : 'Não disponível'}}</td>
       <td><a href="" ng-click="configuracoes.editarUsuario(usuario)"><span
         class="glyphicon glyphicon-pencil"></span></a></td>
     </tr>
-    <tr ng-if="configuracoes.usuarios.length < len"
-        ng-repeat="n in getNumber(len - configuracoes.usuarios.length < 0 ? 0 : len - configuracoes.usuarios.length) track by $index">
+    <tr ng-if="configuracoes.usuarios.length < configuracoes.usuariosPagination.max"
+        ng-repeat="n in getNumber(configuracoes.usuariosPagination.max - configuracoes.usuarios.length < 0 ? 0 : configuracoes.usuariosPagination.max - configuracoes.usuarios.length) track by $index">
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -52,7 +52,7 @@
     </tbody>
   </table>
   <div class="paginas">
-    <ul uib-pagination total-items="600" ng-model="bigCurrentPage" max-size="15" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+    <ul uib-pagination total-items="configuracoes.usuariosPagination.total" ng-model="configuracoes.usuariosPagination.current" max-size="configuracoes.usuariosPagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
   </div>
 </div>
 <!--FIM USUARIOS-->
