--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -37,12 +37,12 @@
               <th>Nome</th>
             </tr>
             </thead>
-            <tbody ng-init="max = 10">
+            <tbody>
               <tr ng-repeat="p in pessoas" ng-click="selecionarPessoa(p)">
                 <td>{{p.codigo}}</td>
                 <td>{{p.nome}}</td>
               </tr>
-              <tr ng-if="pessoas.length < max" ng-repeat="n in getNumber(pessoas.length < max ? max - pessoas.length : 0) track by $index">
+              <tr ng-if="pessoas.length < pagination.max" ng-repeat="n in getNumber(pessoas.length < pagination.max ? pagination.max - pessoas.length : 0) track by $index">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
               </tr>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="paginas">
-      <ul uib-pagination total-items="600" ng-model="bigCurrentPage" max-size="15" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+      <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="pagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
 
   </div>
