--- a/app/partials/modalPerfil.html
+++ b/app/partials/modalPerfil.html
@@ -9,26 +9,18 @@
 
     <div class="col-md-6">
       <h4>Nome</h4>
-      <input type="text" class="form-control" ng-model="modal.usuario.nome">
+      <input type="text" class="form-control" ng-model="modal.perfil.nome">
     </div>
     <div class="col-md-6">
-      <div><h4>Ativo</h4></div>
-      <div class="btn-group btn-toggle botao-esticado">
-        <label class="btn btn-primary" ng-model="modal.usuario.ativo" uib-btn-radio="true">
-          <span class="glyphicon glyphicon-eye-open"></span>
-          Sim
-        </label>
-        <label class="btn btn-primary" ng-model="modal.usuario.ativo" uib-btn-radio="false">
-          <span class="glyphicon glyphicon-eye-close"></span> Não
-        </label>
-      </div>
+      <h4>Data de Cadastro</h4>
+      <input type="text" class="form-control text-center" readonly="true" ng-value="modal.perfil.dataCadastro | date">
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12" style="padding: 0">
       <uib-accordion close-others="false">
         <div class="col-md-12">
           <div uib-accordion-group class="panel-default" heading="{{modulo.nome}}"
-               ng-repeat="modulo in modal.permissoes track by $index">
+               ng-repeat="modulo in modal.perfil.permissoes">
             <div ng-repeat="(key, value) in modulo.permissoes">
               <div class="col-md-6" ng-if="value.tipo === 'percent'">
                 <label>{{value.nome}}</label>
