--- a/app/styles/_configuracoes.scss
+++ b/app/styles/_configuracoes.scss
@@ -110,6 +110,10 @@
         }
       }
 
+      .atalhos {
+        padding-left: 20px;
+      }
+
       .versao {
         text-align: center;
       }
